--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header>
+        <a id="admin-link" href="admin/create-post.html">Admin</a>
+    </header>
+    <main id="main-content">
+        <ul id="main-ul">
+            <!-- Content -->
+        </ul>
+    </main>
+
     <script src="js/posts.js"></script>
 </body>
 </html>
