basic layout figured out

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,43 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    table, thead, tbody, th, td{
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
 <body>
+    <div id="container">
+        <h1>Puns</h1>
+        
+        <nav id="main-nav">
+            <a href="create-pun.html">Create new pun</a>
+        </nav>
+
+        <table>
+            <thead>
+                <th>Titel</th>
+                <th>Författare</th>
+                <th>Taggar</th>
+                <th>Datum</th>
+                <th>Hantera</th>
+            </thead>
+            <tbody>
+                <!-- <td>testar</td>
+                <td>John doe</td>
+                <td>
+                    <li>tag1</li>
+                    <li>tag2</li>
+                    <li>tag3</li>
+                </td>
+                <td>2023-12-06</td>
+                <td><a href="#">Update</a> |
+                    <a href="#">Delete</a> </td> -->
+            </tbody>
+        </table>
+
+    </div>
     <script src="js/manage-posts.js"></script>
 </body>
 </html>
