--- a/admin/index.html
+++ b/admin/index.html
@@ -13,13 +13,13 @@
 </style>
 <body>
     <div id="container">
-        <h1>Puns</h1>
+        <h1>All blog entries</h1>
         
         <nav id="main-nav">
-            <a href="create-pun.html">Create new pun</a>
+            <a href="create-pun.html">Create new blog entry</a>
         </nav>
 
-        <table>
+        <table id="blog-table">
             <thead>
                 <th>Titel</th>
                 <th>Författare</th>
@@ -27,7 +27,7 @@
                 <th>Datum</th>
                 <th>Hantera</th>
             </thead>
-            <tbody>
+            <tbody id="table-body">
                 <!-- <td>testar</td>
                 <td>John doe</td>
                 <td>
