--- a/admin/index.html
+++ b/admin/index.html
@@ -28,7 +28,8 @@
                 <th>Hantera</th>
             </thead>
             <tbody id="table-body">
-                <!-- <td>testar</td>
+                <!-- En mall för att se hur jag ska sätta upp datan sen i javascript
+                    <td>testar</td>
                 <td>John doe</td>
                 <td>
                     <li>tag1</li>
