--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   
     <header>
-        <a id="admin-link" href="admin/create-post.html">Admin</a>
+        <a id="admin-link" href="admin/index.html">Admin</a>
     </header>
     <main id="main-content">
         <ul id="main-ul">
