--- a/admin/update-post.html
+++ b/admin/update-post.html
@@ -2,11 +2,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Update Page</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    form{
+        display: flex;
+        flex-direction: column;
+        /* width: 50vw; */
+    }
+    label, input, textarea{
+        margin: 5px;
+        align-self: center;
+        width: 40vw;
+    }
+    label, input{
+        height: 2em;
+    }
+    a{
+        margin: 5px 50%;
+    }
+</style>
 <body>
-    <h1>This page is required for the VG grade</h1>
+    <!-- <h1>This page is required for the VG grade</h1> -->
+
+    <form>
+        <label for="">Update</label>
+        <input id="title" type="text">
+        <input id="author" type="text">
+        <input id="date" type="text">
+        <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
+        <input id="tags" type="text">
+        <input id="submit-btn" type="submit" value="Update">
+    </form>
+    <a href="index.html">Back</a>
+
 
     <script src="js/update-post.js"></script>
 </body>
