comments and working delete link

--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,8 @@
         <h1>All blog entries</h1>
         
         <nav id="main-nav">
-            <a href="create-pun.html">Create new blog entry</a>
+            <a href="../index.html">View all blogs</a>
+            <a href="create-post.html">Create new blog entry</a>
         </nav>
 
         <table id="blog-table">
