--- a/admin/create-post.html
+++ b/admin/create-post.html
@@ -8,6 +8,18 @@
 <body>
     <h1>This page is required for the VG grade</h1>
 
+    <form action="">
+        <input type="text">
+        <input type="text">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <select name="" id=""></select>
+        <button>Create</button>
+        <nav id="main-nav">
+            <a href="index.html">Back to admin view</a>
+        </nav>
+    </form>
+
+
     <script src="js/create-post.js"></script>
 </body>
 </html>
