--- a/admin/create-post.html
+++ b/admin/create-post.html
@@ -9,10 +9,10 @@
     <h1>This page is required for the VG grade</h1>
 
     <form action="">
-        <input type="text">
-        <input type="text">
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-        <select name="" id=""></select>
+        <input type="text" placeholder="Title">
+        <input type="text" placeholder="Author">
+        <textarea name="blog-text" id="blog-text" cols="30" rows="10" placeholder="Your blog"></textarea>
+        <select name="blog-tag" id="blog-tag"></select>
         <button>Create</button>
         <nav id="main-nav">
             <a href="index.html">Back to admin view</a>
