create post works, except for tags

--- a/admin/create-post.html
+++ b/admin/create-post.html
@@ -8,12 +8,12 @@
 <body>
     <h1>This page is required for the VG grade</h1>
 
-    <form action="">
-        <input type="text" placeholder="Title">
-        <input type="text" placeholder="Author">
+    <form id="blog-form">
+        <input type="text" name="blog-title" placeholder="Title">
+        <input type="text" name="blog-author" placeholder="Author">
         <textarea name="blog-text" id="blog-text" cols="30" rows="10" placeholder="Your blog"></textarea>
         <select name="blog-tag" id="blog-tag"></select>
-        <button>Create</button>
+        <button name="blog-send" id="blog-button">Create</button>
         <nav id="main-nav">
             <a href="index.html">Back to admin view</a>
         </nav>
