--- a/post.html
+++ b/post.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <h1 id="title">Title</h1>
+    <h3 id="author">Author: </h3>
+
+    <p id="info">info</p>
+    <p id="tags">tags</p>
+
+    <p id="date">date</p>
+    <a href="#">back</a>
+    
     <script src="js/post.js"></script>
 </body>
 </html>
