Completed post and small css

--- a/post.html
+++ b/post.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1 id="title">Title</h1>
-    <h3 id="author">Author: </h3>
+    <h3>Author: </h3><p id="author"></p>
+    <p id="date">date</p>
 
     <p id="info">info</p>
     <p id="tags">tags</p>
 
-    <p id="date">date</p>
-    <a href="#">back</a>
+    <a href="index.html">back</a>
     
     <script src="js/post.js"></script>
 </body>
