--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   
     <header>
+        <h1>Blogs</h1>
         <a id="admin-link" href="admin/index.html">Admin</a>
     </header>
     <main id="main-content">
