Need to have recent changes

--- a/admin/update-post.html
+++ b/admin/update-post.html
@@ -37,7 +37,18 @@
         <label for="content">Content:</label>
         <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
         <label for="tags">Tags:</label>
-        <input id="tags" type="text">
+        <select name="blog-tag" id="blog-tag" multiple="multiple">
+            <option value="Lifestyle">Lifestyle</option>
+            <option value="Food">Food</option>  
+            <option value="Gaming">Gaming</option>
+            <option value="Travel">Travel</option>
+            <option value="Philosophy">Philosophy</option>
+            <option value="Fantasy">Fantasy</option>
+            <option value="Science">Science</option>
+            <option value="People">People</option>
+            <option value="Politics">Politics</option>
+            <option value="Family">Family</option>
+        </select>
         <input id="submit-btn" type="submit" value="Update">
     </form>
     <a href="index.html">Back</a>
