--- a/admin/update-post.html
+++ b/admin/update-post.html
@@ -37,7 +37,7 @@
         <label for="content">Content:</label>
         <textarea name="content" id="post-content" cols="30" rows="10"></textarea>
         <label for="tags">Tags:</label>
-        <select name="blog-tag" id="blog-tag" multiple="multiple">
+        <select name="tags" id="tags" multiple="multiple">
             <option value="Lifestyle">Lifestyle</option>
             <option value="Food">Food</option>  
             <option value="Gaming">Gaming</option>
@@ -52,7 +52,6 @@
         <input id="submit-btn" type="submit" value="Update">
     </form>
     <a href="index.html">Back</a>
-
 
     <script src="js/update-post.js"></script>
 </body>
