Setup for css changes

--- a/admin/index.html
+++ b/admin/index.html
@@ -5,19 +5,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<style>
-    table, thead, tbody, th, td{
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
 <body>
     <div id="container">
         <h1>All blog entries</h1>
         
         <nav id="main-nav">
-            <a href="../index.html">View all blogs</a>
-            <a href="create-post.html">Create new blog entry</a>
+            <button><a href="../index.html" id="view-blogs">View all blogs</a></button>
+            <button><a href="create-post.html" id="create-blog">Create new blog entry</a></button>
         </nav>
 
         <table id="blog-table">
