Styling in post

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-    <header>
+    <header id="index-header">
         <h1>Blogs</h1>
         <a id="admin-link" href="admin/index.html">Admin</a>
     </header>
