Finished css changes and delete fix

--- a/admin/create-post.html
+++ b/admin/create-post.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <form id="blog-form">
-        <input type="text" name="blog-title" placeholder="Title">
-        <input type="text" name="blog-author" placeholder="Author">
+        <input class="input" type="text" name="blog-title" placeholder="Title">
+        <input class="input" type="text" name="blog-author" placeholder="Author">
         <textarea name="blog-text" id="blog-text" cols="30" rows="10" placeholder="Your blog"></textarea>
         <select name="blog-tag" id="blog-tag" multiple="multiple">
             <option value="Lifestyle">Lifestyle</option>
